--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
-name = "project-stats"
-version = "0.1.0"
+name = "pstatool"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
 tokio = { version = "1.43", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-git2 = { version = "0.20.0" , features = ["openssl-sys"]}
+git2 = { version = "0.20.0", features = ["openssl-sys"] }
 sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
 serde_yaml = "0.9.34"
 once_cell = "1.20.3"
+clap = { version = "4.5.18", features = ["env"] }
+clap_derive = "4.5.28"
